Removed assets and added new ones plus apt of features
Blogs, Comments and a vast amount of work on authentication,
authorisation, cancan 2.0 and sorcery, and cleaning up my mess to get
it working

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -114,13 +114,39 @@ color: #999;
 	font-weight: 300;
 }
 
+// @media (max-width: 1015px) amd (min-width: 980px){
+// 	.jumbotron h1{
+// 		font-size: 42px;
+// 	}
+// 	.jumbotron p {
+// 		margin-right: 0;
+// 		margin-left: 0;
+// 		font-size:18px;
+// 		line-height:24px;
+// 	}
+// 	.jumbotron .btn {
+// 	margin-bottom: 10px;
+// 	font-size: 18px;
+// 	padding: 10px 14px;
+// 	margin: 0 auto 10px;
+// 	}
+// }
 
 @media (max-width: 980px) and (min-width: 768px) {
 	.jumbotron h1{
-		font-size: 62px;
+		font-size: 52px;
+	}
+	.jumbotron p {
+		margin-right: 0;
+		margin-left: 0;
+		font-size:18px;
+		line-height:24px;
 	}
 	.jumbotron .btn {
 	margin-bottom: 10px;
+	font-size: 18px;
+	padding: 10px 14px;
+	margin: 0 auto 10px;
 	}
 }
 
@@ -141,18 +167,18 @@ color: #999;
 
 @media (max-width: 480px){
 	.jumbotron h1{
-		font-size: 45px;
+		font-size: 35px;
 		margin-right: 0;
 	}
 	.jumbotron p{
 		margin-right:0;
 		margin-left:0;
-		font-size:18px;
+		font-size:16px;
 		line-height:24px;
 	}
 	.jumbotron .btn {
 		display: block;
-		font-size: 18px;
+		font-size: 16px;
 		padding: 10px 14px;
 		margin: 0 auto 10px;
 	}
