--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,76 @@
+
+<!--====================== for checking viewport======================= -->
+<!--======================
+<div id="viewportwidth" class="alert alert-success">
+	
+</div>
+<div id="resolutionwidth" class="alert alert-info">
+	
+</div>
+
+
+<script type="text/javascript">
+function getViewportWidth()
+{
+       if (window.innerWidth)
+       {
+               return window.innerWidth;
+       }
+       else if (document.body && document.body.offsetWidth)
+       {
+               return document.body.offsetWidth;
+       }
+       else
+       {
+               return 0;
+       }
+}
+
+function getViewportHeight()
+{
+       if (window.innerHeight)
+       {
+               return window.innerHeight;
+       }
+       else if (document.body && document.body.offsetHeight)
+       {
+               return document.body.offsetHeight;
+       }
+       else
+       {
+               return 0;
+       }
+}
+
+var tellMeTheSizes=function()
+{
+       document.getElementById("viewportwidth").innerHTML = getViewportWidth() + "px";
+       document.getElementById("viewportheight").innerHTML = getViewportHeight() + "px";
+       document.getElementById("resolutionheight").innerHTML = screen.height + "px";
+       document.getElementById("resolutionwidth").innerHTML = screen.width + "px";
+}
+
+window.onload=function()
+{
+       tellMeTheSizes();
+}
+
+window.onresize=function()
+{
+       tellMeTheSizes();
+}
+
+window.onmousemove=function(event)
+{
+       ev = event || window.event;
+       document.getElementById("mousetop").innerHTML = ev.pageY + "px";
+       document.getElementById("mouseleft").innerHTML = ev.pageX + "px";
+}
+</script>
+
+-->
+
+
 <div class="row">
 	<div class="span2">
 		<p>&nbsp;</p>
@@ -48,7 +121,7 @@
 			<li><%= link_to "Kit hire", :kit_hire, title: 'Kit hire' %></li> 
 			<li><%= link_to "Itineraries and prices", :itineraries, title: 'Itineraries and prices' %></li>
 			<li><%= link_to "About Tanzania", :about_tanzania, title: 'About Tanzania' %></li>
-			<li><%= link_to "Read our Blog", '#:posts', title: 'Read our Blog' %></li>
+			<li><%= link_to "Read our Blog", :posts, title: 'Read our Blog' %></li>
 		</ul>
 		<ul class="quick-links">
 			<li>LinkedIn </li>
