--- a/app/views/treks/show.html.erb
+++ b/app/views/treks/show.html.erb
@@ -2,18 +2,22 @@
 <h1><%=t '.title', :default => @trek.title %></h1>
 
   <%= markdown @trek.description %>
+	
+<% if can? :access, @trek %>
+	<div class="form-actions">
+	  <%= link_to t('.back', :default => t("helpers.links.back")),
+	              treks_path, :class => 'btn'  %>
+	  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+	              edit_trek_path(@trek), :class => 'btn' %>
+	  <%= link_to t('.destroy', :default => t("helpers.links.delete")),
+	              trek_path(@trek),
+	              :method => 'delete',
+	              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+	              :class => 'btn btn-danger' %>
+	</div> 
+<% end %>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              treks_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_trek_path(@trek), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.delete")),
-              trek_path(@trek),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-</div> 
+<!--=== Destinations start here ===-->
 
 <article class="">
 <% if !@trek.destinations.blank? %>
@@ -22,7 +26,7 @@
   <% for tr in @trek.destinations %>
     <h3><%= link_to tr.title, trek_destination_path(@trek, tr), title: tr.title %></h3>
 		<%= markdown tr.description.truncate(300) %>
-		<p><%= link_to 'Read more...', trek_destination_path(@trek, tr) %></p>
+		<p><%= link_to 'Read more...', trek_destination_path(@trek, tr), class: 'btn' %></p>
   <% end %>
 <% else %>
   <div class="alert">
@@ -32,31 +36,37 @@
 <% end %>
 </article>
 <hr>
-<%= form_for [@trek, @trek.destinations.new], :html => { :class => 'form-horizontal' } do |f| %>
-  <h3 class="page-title">Add a new itinerary</h3>
-	<br>
-	<div class="control-group">
-    <%= f.label :title, 'Destination name', :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :title, :class => 'span3', required: true %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :price, 'Price breakdown', :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_area :price, :class => 'span6', rows: 6 %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :description, class: 'control-label' %>
-    <div class="controls">
-      <%= f.text_area :description, class: 'span6', rows: 8 %>
-    </div>
-  </div>
 
-  <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                treks_path, :class => 'btn' %>
-  </div>
+
+<% if can? :access, @trek %>
+<!--=== Permissions to do as admins please ===-->
+
+	<%= form_for [@trek, @trek.destinations.new], :html => { :class => 'form-horizontal' } do |f| %>
+	  <h3 class="page-title">Add a new itinerary</h3>
+		<br>
+		<div class="control-group">
+	    <%= f.label :title, 'Destination name', :class => 'control-label' %>
+	    <div class="controls">
+	      <%= f.text_field :title, :class => 'span3', required: true %>
+	    </div>
+	  </div>
+	  <div class="control-group">
+	    <%= f.label :price, 'Price breakdown', :class => 'control-label' %>
+	    <div class="controls">
+	      <%= f.text_area :price, :class => 'span6', rows: 6 %>
+	    </div>
+	  </div>
+	  <div class="control-group">
+	    <%= f.label :description, class: 'control-label' %>
+	    <div class="controls">
+	      <%= f.text_area :description, class: 'span6', rows: 8 %>
+	    </div>
+	  </div>
+	
+	  <div class="form-actions">
+	    <%= f.submit nil, :class => 'btn btn-primary' %>
+	    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+	                treks_path, :class => 'btn' %>
+	  </div>
+	<% end %>
 <% end %>
