--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -10,17 +10,19 @@
   <%= @album.description %>
 </p>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              albums_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_album_path(@album), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              album_path(@album),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
-	<%= link_to t('.new', :default => t("helpers.links.add_new_photos")),
-	            new_album_photo_path(@album),
-	            :class => 'btn btn-primary' %>
-</div>
+<% if can? :access, @album %>
+	<div class="form-actions">
+	  <%= link_to t('.back', :default => t("helpers.links.back")),
+	              albums_path, :class => 'btn'  %>
+	  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+	              edit_album_path(@album), :class => 'btn' %>
+	  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+	              album_path(@album),
+	              :method => 'delete',
+	              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+	              :class => 'btn btn-danger' %>
+		<%= link_to t('.new', :default => t("helpers.links.add_new_photos")),
+		            new_album_photo_path(@album),
+		            :class => 'btn btn-primary' %>
+	</div>
+<% end %>
