--- a/app/views/day_trips/index.html.erb
+++ b/app/views/day_trips/index.html.erb
@@ -14,6 +14,9 @@
 	<%= markdown day_trip.description.truncate(300) %>
 	<hr>
 <% end %>
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_day_trip_path,
-            :class => 'btn btn-primary' %>
+
+<% if can? :access, @day_trips %>
+	<%= link_to t('.new', :default => t("helpers.links.new")),
+	            new_day_trip_path,
+	            :class => 'btn btn-primary' %>
+<% end %>
