--- a/app/views/day_trips/show.html.erb
+++ b/app/views/day_trips/show.html.erb
@@ -2,24 +2,29 @@
 <h1><%=t '.title', :default => @day_trip.title %></h1>
 <%= markdown @day_trip.description %>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              day_trips_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_day_trip_path(@day_trip), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              day_trip_path(@day_trip),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
+<% if can? :access, @day_trip %>
+	<div class="form-actions">
+	  <%= link_to t('.back', :default => t("helpers.links.back")),
+	              day_trips_path, :class => 'btn'  %>
+	  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+	              edit_day_trip_path(@day_trip), :class => 'btn' %>
+	  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+	              day_trip_path(@day_trip),
+	              :method => 'delete',
+	              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+	              :class => 'btn btn-danger' %>
 </div>
+<% end %>
+<br>
+
+
 <% if !@day_trip.destinations.blank? %>
 	<h6>Destinations</h6>
 	<hr>
   <% for dt in @day_trip.destinations %>
     <h3><%= link_to dt.title, day_trip_destination_path(@day_trip, dt), title: dt.title %></h3>
 		<%= markdown dt.description.truncate(300) %>
-		<p><%= link_to 'Read more...', day_trip_destination_path(@day_trip, dt) %></p>
+		<p><%= link_to 'Read more...', day_trip_destination_path(@day_trip, dt), class: 'btn' %></p>
   <% end %>
 <% else %>
   <div class="alert">
@@ -29,31 +34,35 @@
 <% end %>
 </article>
 <hr>
-<%= form_for [@day_trip, @day_trip.destinations.new], :html => { :class => 'form-horizontal' } do |f| %>
-  <h3 class="page-title">Add a new itinerary</h3>
-	<br>
-	<div class="control-group">
-    <%= f.label :title, 'Destination name', :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :title, :class => 'span3', required: true %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :price, 'Price breakdown', :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_area :price, :class => 'span6', rows: 6 %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :description, class: 'control-label' %>
-    <div class="controls">
-      <%= f.text_area :description, class: 'span6', rows: 8 %>
-    </div>
-  </div>
 
-  <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                day_trips_path, :class => 'btn' %>
-  </div>
+
+<% if can? :access, @day_trip %>
+	<%= form_for [@day_trip, @day_trip.destinations.new], :html => { :class => 'form-horizontal' } do |f| %>
+	  <h3 class="page-title">Add a new itinerary</h3>
+		<br>
+		<div class="control-group">
+	    <%= f.label :title, 'Destination name', :class => 'control-label' %>
+	    <div class="controls">
+	      <%= f.text_field :title, :class => 'span3', required: true %>
+	    </div>
+	  </div>
+	  <div class="control-group">
+	    <%= f.label :price, 'Price breakdown', :class => 'control-label' %>
+	    <div class="controls">
+	      <%= f.text_area :price, :class => 'span6', rows: 6 %>
+	    </div>
+	  </div>
+	  <div class="control-group">
+	    <%= f.label :description, class: 'control-label' %>
+	    <div class="controls">
+	      <%= f.text_area :description, class: 'span6', rows: 8 %>
+	    </div>
+	  </div>
+	
+	  <div class="form-actions">
+	    <%= f.submit nil, :class => 'btn btn-primary' %>
+	    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+	                day_trips_path, :class => 'btn' %>
+	  </div>
+	<% end %>
 <% end %>
