--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,6 +9,11 @@
       </footer>
 
     </div> <!-- /container -->
+		
+		<!-- Javascripts
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <%= javascript_include_tag "application" %>
 
 		<script>
 			$('.carousel').carousel({
