--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,10 +10,6 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
-		<!-- Javascripts
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <%= javascript_include_tag "application" %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
 
@@ -39,7 +35,7 @@
               <li><%= link_to "Safaris", :safaris  %></li>
               <li><%= link_to "Beach Destinations", :beaches  %></li>
 							<li><%= link_to "Day Trips", :day_trips  %></li>
-							<!-- <li><%= link_to "Itineraries", :itineraries  %></li> -->
+							<li><%= link_to "Kit Hire", :kit_hire  %></li>
             </ul>
 						
 						<!-- .dropdown -->
@@ -50,15 +46,21 @@
 							  <ul class="dropdown-menu">
 							    <li>
 										<%= form_tag sessions_path, :method => :post, :class => 'well' do %>
-										<h6>Login:</h6>
-										  <div class="controls">
-										    <%= text_field_tag :username, nil, placeholder: 'Username', autofocus: true %>
-										  </div>
-										  <div class="controls">
-										    <%= password_field_tag :password, nil, placeholder: 'Password' %>
-												<p class="help-block"><small><a href="#">Forgot Password?</a></small></p>
-										  </div>
-										   <div class="form-actions"><%= submit_tag "Login", class: 'btn btn-primary' %> </div> 
+											<h6>Login:</h6>
+											<div class="control-group">
+												<div class="controls">
+												  <%= text_field_tag :username, nil, placeholder: 'Username', required: true, autofocus: true %>
+												</div>
+											</div>
+											<div class="control-group">
+												<div class="controls">
+												  <%= password_field_tag :password, nil, placeholder: 'Password', required: true %>
+													<p class="help-block"><small><a href="#">Forgot Password?</a></small></p>
+												</div>
+											</div>
+											<div class="form-actions">
+												<%= submit_tag "Login", class: 'btn btn-primary' %>
+											</div> 
 										<% end %>
 									</li>
 							  </ul>
@@ -105,11 +107,19 @@
 											</div>
 									<% end %>
 									</li>
-							  </ul>
+									
 							<% else %>
-								<ul class="dropdown-menu">
-									<li><a href="#">Users</a></li>
-								</ul>
+									<li class="dropdown">
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %> <b class="caret"></b></a>
+										<ul class="dropdown-menu">
+											<li><%= link_to "My Account", user_path(current_user) %></li>
+											<% if can? :access, @user %>
+											<li class="divider-horizontal"></li>
+											<li><%= link_to "Manage Users", users_path %></li>
+											<% end %>
+										</ul>
+									</li>
+							  </ul>
 							<% end %>	
 							</li>
 						</ul>
@@ -117,3 +127,9 @@
         </div>
       </div>
     </div>
+			
+		<% flash.each do |name, msg| %>
+			<div class="container">
+				<%= content_tag :div, msg, :id => "flash_#{name}", :class => "alert alert-#{name}" %>
+			</div>
+		<% end %>
