--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,6 @@
 
     <div class="container">
       <div class="content">
-			<% if !("welcome#index") %>
-				<%= yield %>
-			<% else %>
-				  
         <div class="row">
            <div class="span9">
               <%= yield %>
@@ -15,17 +11,20 @@
               <div class="well sidebar-nav">
                 <ul class="nav nav-list">
                   <li class="nav-header">Important links</li>
-                  <li><%= link_to "Galleries", :albums  %></li>
-                  <li><%= link_to "Accommodation", "#"  %></li>
-                  <li><%= link_to "About Tanzania", :about_tanzania  %></li>
-                  <li><%= link_to "Important Information", :important_information  %></li>
-                  <li><%= link_to "About Us", :about_us  %></li>
-									<li><%= link_to "Contact Us", :contact_us  %></li> 
-									<li><%= link_to "Guides and porters", :guides_and_porters  %></li>
+                  <li><%= link_to "Accommodation", :accommodation, title: 'Accommodation information' %></li>
+                  <li><%= link_to "Important information", :important_information, title: 'Important information for tourists' %></li>
+									<li><%= link_to "Guides and porters", :guides_and_porters, title: 'Our tour guides and porters' %></li>
+                  <li><%= link_to "About Tanzania", :about_tanzania, title: 'About Tanzania' %></li>
+									<li><%= link_to "Contact us", :contact_us, title: 'Contact Us' %></li> 
+									<li><%= link_to "Newsletter", ':newsletters', title: 'Subscribe to our newsletter' %></li>
+                  <li><%= link_to "About us", :about_us, title: 'About us' %></li>
+                  <li><%= link_to "Galleries", :albums, title: 'Photo galleries' %></li>
+									<li><%= link_to "Blog", :posts, title: 'Read the blog' %></li>
+									
                 </ul>
               </div><!--/.well -->
             </div><!--/span-->
         </div><!--/row-->
       </div><!--/content-->
-			<% end %>
+
 <%= render 'layouts/footer' %>
