--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -9,14 +9,17 @@
   <%= @photo.caption %>
 </p>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              album_photos_path(@album), :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_album_photo_path(@album, @photo), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              album_photo_path(@album, @photo),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
+
+<% if can? :access, @photo %>
+	<div class="form-actions">
+	  <%= link_to t('.back', :default => t("helpers.links.back")),
+	              album_photos_path(@album), :class => 'btn'  %>
+	  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+	              edit_album_photo_path(@album, @photo), :class => 'btn' %>
+	  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+	              album_photo_path(@album, @photo),
+	              :method => 'delete',
+	              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+	              :class => 'btn btn-danger' %>
 </div>
+<% end %>
