--- a/app/views/safaris/show.html.erb
+++ b/app/views/safaris/show.html.erb
@@ -3,18 +3,22 @@
 
 <%= markdown @safari.description %>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              safaris_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_safari_path(@safari), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              safari_path(@safari),
-              :method => 'delete',
-              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
+
+<% if can? :access, @safari %>
+	<div class="form-actions">
+	  <%= link_to t('.back', :default => t("helpers.links.back")),
+	              safaris_path, :class => 'btn'  %>
+	  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+	              edit_safari_path(@safari), :class => 'btn' %>
+	  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+	              safari_path(@safari),
+	              :method => 'delete',
+	              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+	              :class => 'btn btn-danger' %>
 </div>
-<br>
+<% end %>
+
+
 <article class="">
 <% if !@safari.destinations.blank? %>
 	<h6>Destinations</h6>
@@ -22,7 +26,7 @@
   <% for dt in @safari.destinations %>
     <h3><%= link_to dt.title, safari_destination_path(@safari, dt), title: dt.title %></h3>
 		<%= markdown dt.description.truncate(300) %>
-		<p><%= link_to 'Read more...', safari_destination_path(@safari, dt) %></p>
+		<p><%= link_to 'Read more...', safari_destination_path(@safari, dt), class: 'btn' %></p>
   <% end %>
 <% else %>
   <div class="alert">
@@ -32,31 +36,36 @@
 <% end %>
 </article>
 <hr>
-<%= form_for [@safari, @safari.destinations.new], :html => { :class => 'form-horizontal' } do |f| %>
-  <h3 class="page-title">Add a new itinerary</h3>
-	<br>
-	<div class="control-group">
-    <%= f.label :title, 'Destination name', :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :title, :class => 'span3', required: true %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :price, 'Price breakdown', :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_area :price, :class => 'span6', rows: 6 %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :description, class: 'control-label' %>
-    <div class="controls">
-      <%= f.text_area :description, class: 'span6', rows: 8 %>
-    </div>
-  </div>
 
-  <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                safaris_path, :class => 'btn' %>
-  </div>
+
+<% if can? :access, @safari %>
+<!-- Permissions for admins to as they please -->
+	<%= form_for [@safari, @safari.destinations.new], :html => { :class => 'form-horizontal' } do |f| %>
+	  <h3 class="page-title">Add a new itinerary</h3>
+		<br>
+		<div class="control-group">
+	    <%= f.label :title, 'Destination name', :class => 'control-label' %>
+	    <div class="controls">
+	      <%= f.text_field :title, :class => 'span3', required: true %>
+	    </div>
+	  </div>
+	  <div class="control-group">
+	    <%= f.label :price, 'Price breakdown', :class => 'control-label' %>
+	    <div class="controls">
+	      <%= f.text_area :price, :class => 'span6', rows: 6 %>
+	    </div>
+	  </div>
+	  <div class="control-group">
+	    <%= f.label :description, class: 'control-label' %>
+	    <div class="controls">
+	      <%= f.text_area :description, class: 'span6', rows: 8 %>
+	    </div>
+	  </div>
+	
+	  <div class="form-actions">
+	    <%= f.submit nil, :class => 'btn btn-primary' %>
+	    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+	                safaris_path, :class => 'btn' %>
+	  </div>
+	<% end %>
 <% end %>
