--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,17 @@
 <%= form_for @user, :html => { :class => 'form-horizontal' } do |f| %>
+
+	<% if @user.errors.any? %>
+	  <div id="control-group">
+	    <div class="alert alert-error controls ">
+			<a class="close" data-dismiss="alert">×</a>
+			<h4 class="alert-heading"><%= pluralize(@user.errors.count, "error") %></h4>
+	    <% @user.errors.full_messages.each do |msg| %>
+	      <em><%= msg %></em><br>
+	    <% end %>
+	    </div>
+	  </div>
+	<% end %>
+	
   <div class="control-group">
     <%= f.label :full_name, :class => 'control-label' %>
     <div class="controls">
@@ -17,22 +30,27 @@
       <%= f.email_field :email, required: true, :class => 'text_field' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :admin, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.check_box :admin, :class => 'check_box' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :moderator, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.check_box :moderator, :class => 'text_field' %>
-    </div>
-  </div>
+
+	<% if can? :access, @user %>
+  	<div class="control-group">
+  	  <%= f.label :admin, :class => 'control-label' %>
+  	  <div class="controls">
+  	    <%= f.check_box :admin, :class => 'check_box' %>
+  	  </div>
+  	</div>
+  	<div class="control-group">
+  	  <%= f.label :moderator, :class => 'control-label' %>
+  	  <div class="controls">
+  	    <%= f.check_box :moderator, :class => 'text_field' %>
+  	  </div>
+  	</div>
+	<% end %>
+	
+	<% if can? :update, :users %>
   <div class="control-group">
     <%= f.label :password, required: true, :class => 'control-label' %>
     <div class="controls">
-      <%= f.password_field :password, :class => 'text_field' %>
+      <%= f.password_field :password, required: true, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
@@ -41,13 +59,14 @@
       <%= f.password_field :password_confirmation, required: true, :class => 'text_field' %>
     </div>
   </div>
+	<% end %>
+	
 	<div class="control-group">
     <%= f.label :about, 'About me', :class => 'control-label' %>
     <div class="controls">
       <%= f.text_area :about, :class => 'span5', rows: 6 %>
     </div>
   </div>
-
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
