--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,24 +3,25 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:full_name) %></th>
+      <th><%= model_class.human_attribute_name(:names) %></th>
+			<% if can? :access, :users %>
       <th><%= model_class.human_attribute_name(:username) %></th>
       <th><%= model_class.human_attribute_name(:email) %></th>
       <th><%= model_class.human_attribute_name(:admin) %></th>
       <th><%= model_class.human_attribute_name(:moderator) %></th>
-      <th><%= model_class.human_attribute_name(:ip_address_info) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
+			<% end %>
     </tr>
   </thead>
   <tbody>
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.full_name, user_path(user) %></td>
+				<% if can? :access, :users %>
         <td><%= user.username %></td>
         <td><%= user.email %></td>
         <td><%= user.admin %></td>
         <td><%= user.moderator %></td>
-        <td><%= user.ip_address_info %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_user_path(user), :class => 'btn btn-mini' %>
@@ -30,11 +31,14 @@
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
         </td>
+				<% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
+<% if can? :access, :users %>
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_user_path,
             :class => 'btn btn-primary' %>
+<% end %>
