Updated About us, Homepage, Accommodation and deleted old assets

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -105,29 +105,29 @@ window.onmousemove=function(event)
 
 <header class="jumbotron masthead">
 	<div class="inner">
-		<h1>African holiday adventures</h1>
-		<p>Bless Africa tours specialises in Mountain trekking, Safaris, beach holidays and short day trips in Tanzania and Kenya.</p>
+		<h1>Bless Africa Tours and Safaris</h1>
+		<p><strong>We</strong> are a locally owned Travel company based in Tanzania. The company specialises in providing organised Treks, Wildlife Safaris, Beach Trips and Day Trips from the town of Moshi, set in the foothills of Mount Kilimanjaro. </p>
 		<p class="download-info">
-			<%= link_to  "African Safaris", :safaris, class: "btn btn-primary btn-large" %>
 			<%= link_to  "Mountain Trekking", :treks, class: "btn btn-primary btn-large" %>
+			<%= link_to  "Wildlife Safaris", :safaris, class: "btn btn-primary btn-large" %>
 			<%= link_to  "Beach Holidays", :beaches, class: "btn btn-primary btn-large" %> 
-			<%= link_to  raw("Day trips <small>(Short holiday trips)</small>"), :day_trips, class: "btn btn-primary btn-large" %>
+			<%= link_to  "Day trips", :day_trips, class: "btn btn-primary btn-large" %>
 		</p>
 	</div>
 	<div class="bs-links">
 		<ul class="quick-links">
 			<li><%= link_to "Important information", :important_information, title: 'Important information' %></li> 
-			<li><%= link_to "Accommodation providers", :accommodation, title: 'Accommodation providers' %></li> 
-			<li><%= link_to "Kit hire", :kit_hire, title: 'Kit hire' %></li> 
-			<li><%= link_to "Itineraries and prices", :itineraries, title: 'Itineraries and prices' %></li>
+			<li><%= link_to "Accommodation", :accommodation, title: 'Accommodation providers' %></li> 
+			<li><%= link_to "Kit Hire", :kit_hire, title: 'Kit hire' %></li> 
+			<li><%= link_to "Itineraries and Prices", :itineraries, title: 'Itineraries and prices' %></li>
 			<li><%= link_to "About Tanzania", :about_tanzania, title: 'About Tanzania' %></li>
 			<li><%= link_to "Read our Blog", :posts, title: 'Read our Blog' %></li>
 		</ul>
 		<ul class="quick-links">
-			<li>LinkedIn </li>
-			<li>Facebook</li>
-			<li class="follow-btn">Twitter</li>
-			<li class="tweet-btn">Google+</li>
+			<li><a href="#" title="Linked in page">LinkedIn</a> </li>
+			<li><a href="http://www.facebook.com/pages/Bless-Africa-Tours/221432741271264" title="Bless-Africa-Tours  facebook page">Facebook</a></li>
+			<li class="follow-btn"><a href="http://twitter.com/blesstours" title="Bless Africa Tours and Safaris twitter profile">Twitter</a></li>
+			<li class="tweet-btn"><a href="#" title="Google plus page">Google+</a></li>
 		</ul>
 	</div>
 </header>
@@ -136,30 +136,30 @@ window.onmousemove=function(event)
 	<div class="row">
 		<div class="span4">
 			<h2><i class="icon icon-user icon-large "></i> About us</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<p>Bless Africa Tours  and safaris is a locally owned Travel company based in Moshi. With over 10 years experience in the Trek and Travel industry and extensive local knowledge and links the company strives to add something extra to a visit to Tanzania.</p>
 		</div>
 		<div class="span4">
-			<h2><i class="icon icon-home icon-large "></i> Accommodation providers</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<h2><i class="icon icon-home icon-large "></i> Accommodation</h2>
+			<p>Included are example of some of the hotels, lodges and camps that Bless Africa Tours  and Safaris may use for holiday accommodation on their organised trips.</p>
 		</div>
 		<div class="span4">
 			<h2><i class="icon icon-gift icon-large "></i> Kit Hire</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<p>Bless Africa Tours and Safaris have an extensive supply of clothing and equipment available to hire for guests taking part in a Trekking holiday.</p>
 		</div>
 	</div>
 	
 	<div class="row">
 		<div class="span4">
-			<h2><i class="icon icon-picture icon-large "></i> Trekking Kilimanjaro</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<h2><i class="icon icon-picture icon-large "></i> Mountain Trekking</h2>
+			<p>With over 10 years experience of supporting and leading  Treks on both Mt Meru and Mt Kilimanjaro,  the team at Bless Africa Tours and safaris are able to offer further advice on selecting the right Trek for our guests.</p>
 		</div>
 		<div class="span4">
-			<h2><i class="icon icon-camera icon-large "></i> Day/Short trips and holidays</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<h2><i class="icon icon-glass icon-large "></i> Safaris and Beach Holidays</h2>
+			<p>Tanzania is blessed with some of the most amazing animal life in the world. Explore the beautiful National Parks, and then round off the trip of a lifetime with a visit to some of the most stunning beaches in Africa.</p>
 		</div>
 		<div class="span4">
-			<h2><i class="icon icon-glass icon-large "></i> Safaris and Beach holidays</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<h2><i class="icon icon-camera icon-large "></i> Day Trips</h2>
+			<p>Set within the foothills of Mount Kilimanjaro, and close to the National parks of Tanzania, Moshi is well placed to explore everything Tanzania has to offer from a Day Hike on Mount Kilimanjaro to the splendour of Arusha National Park.</p>
 		</div>
 	</div>
 </div>
