--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,13 @@
       <footer class="footer">
+      	<p><%= image_tag "bless-africa-tours-logo.png", title: "the bless africa tours logo", class: "pull-right" %></p>
         <p>&copy; Bless Africa Tours &amp; Safaris 2012 &bull; 
 					<%= link_to "About us", :about_us %> &bull; 
 					<%= link_to "About Tanzania", :about_tanzania %> &bull; 
 					<%= link_to "Important Information", :important_information %> &bull; 
 					<%= link_to "Contact us", :contact_us %>
 				</p>
-				<p>Designed and built with all the love in the world <a href="http://safarista.com" target="_blank" title="Safarista Design">@Safarista Design</a> by <a href="http://twitter.com/ilinkoln">@iLinkoln</a></p>
-      </footer>
+				<p>Designed and built with all the love in the world <a href="http://safarista.com" target="_blank" title="Safarista Design">@Safarista Design</a> by <a href="http://twitter.com/ilinkoln">@iLinkoln</a> and <a href="http://safarista.com" title="Safarista Design | Web, branding, graphic, logo design, seo and web hosting Lincoln UK ">@Safarista</a></p>
+			</footer>
 
     </div> <!-- /container -->
 		
@@ -20,6 +21,20 @@
 			  interval: 2000
 			})
 		</script>
+		
+		
+		<script type="text/javascript">
 
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-19064616-12']);
+		  _gaq.push(['_trackPageview']);
+
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+
+		</script>
   </body>
 </html>
