--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
               <%= yield %>
             </div>
             <div class="span3">
-              <div class="well sidebar-nav">
+							<p style="text-align:center;"><%= link_to image_tag("bless-africa-tours-logo.png", alt: 'Bless Africa Tours', title: 'Bless Africa Tours'), :root, title: 'Bless Africa Tours' %></p>
+              <hr>
+							<div class="well sidebar-nav">
                 <ul class="nav nav-list">
                   <li class="nav-header">Important links</li>
                   <li><%= link_to "Accommodation", :accommodation, title: 'Accommodation information' %></li>
