--- a/app/views/welcome/accommodation.html.erb
+++ b/app/views/welcome/accommodation.html.erb
@@ -1,4 +1,25 @@
-<section class="">
-	<h1>Accommodation providers</h1>
-	<p>...</p>
+<section class="accommodation">
+	<h1>ACCOMMODATION LIST</h1>
+	<h2>Accommodation in Moshi</h2>
+	
+	<p>Hotels in Moshi can be base hotels for Mount Kilimanjaro and Mount Meru treks as well as all Safaris</p>
+	<p><strong>Ameg lodge</strong><br>
+	<em>Luxury hotel</em><br>
+	Ameg lodge is based at the foot of Mt. Kilimanjaro in Tanzania. Set in a 4.5 acre area, it has been constructed with local Tanzanian materials and designed to combine both antique and modern African styles, creating a unique and enjoyable experience for  guests. 
+	<br>
+	<a href="http://www.ameglodge.com" title="AMEG Lodge Tanzania">www.ameglodge.com</a>
+	</p>
+	
+	<p><strong>Moshi Leopard Hotel</strong><br>
+	<em>Standard hotel</em><br>
+	Located along Market Street and centrally placed within the shopping and business area of Moshi, the hotel offers a panoramic view of Mount Kilimanjaro. The hotel is only 35 minutes from the Kilimanjaro International Airport and 5 minutes from the Moshi airport and the bus station. 
+	<br>
+	 <a href="http://www.leopardhotel.com/" title="Leopard Moshi Hotel - Home">www.leopardhotel.com/</a>
+	</p>
+	
+	<p><strong>Osy Grand Hotel</strong><br>
+	<em>Standard hotel</em><br>
+	The Osy Grand Hotel is located in the centre of Moshi. The hotel is locally owned and caters for mid-range and budget travellers.  The rooms on the upper floors of the hotel offer panoramic views of Mount Kilimanjaro.	<br>
+	<a href="http://www.osygrandhotel.com/" title="">www.osygrandhotel.com/</a>
+	</p>
 </section>
