--- a/app/views/welcome/kit_hire.html.erb
+++ b/app/views/welcome/kit_hire.html.erb
@@ -1,4 +1,118 @@
 <section class="">
-	<h1>Safari and trekking kit hire providers</h1>
-	<p>...</p>
+	<h1>MOUNTAIN EQUIPMENT</h1>
+	<br>
+	<table summary="Mountain climbing equipment prices and information. Prices shown are for hire and per each trip." class="table">
+	<caption>PRICES FOR HIRE: </caption>
+	<thead><tr><th colspan="2">PRICES SHOWN ARE PER TRIP</th></tr></thead>
+	<tbody>
+		<tr>
+			<td>Walking Boots	</td>
+			<td>$30</td> 
+		</tr>
+		<tr>
+			<td>Down Jacket	</td>
+			<td>$20</td> 
+		</tr>
+		<tr>
+			<td>Waterproof jacket	</td>
+			<td>$10</td> 
+		</tr>
+		<tr>
+			<td>Waterproof Poncho </td>
+			<td>$15</td> 
+		</tr>
+		<tr>
+			<td>Fleece jumper	</td>
+			<td>$10</td> 
+		</tr>
+		<tr>
+			<td>Fleece jackets </td>
+			<td>$10</td> 
+		</tr>
+		<tr>
+			<td>Fleece trousers </td>
+			<td>$10</td> 
+		</tr>
+		<tr>
+			<td>Thermal base layer top</td>
+			<td>$10</td> 
+		</tr>
+		<tr>
+			<td>Thermal base layer leggings </td>
+			<td>$10</td> 
+		</tr>
+		<tr>
+			<td>Waterproof over trousers</td>
+			<td>$15</td>
+		</tr>
+		<tr> 
+			<td>Walking Trousers</td>
+			<td>$10</td>
+		</tr>
+		<tr> 
+			<td>Woolly or fleece hat</td>
+			<td>$5 </td> 
+		</tr>
+		<tr>
+			<td>Balaclava </td>
+			<td>$10</td> 
+		</tr>
+		<tr>
+			<td>Sun hat </td>
+			<td>$5 </td> 
+		</tr>
+		<tr>
+			<td>Gloves</td>
+			<td>$10</td> 
+		</tr>
+		<tr>
+			<td>4 season Sleeping bag</td>
+			<td>$25</td> 
+		</tr>
+		<tr>
+			<td>Sleeping bag liner</td>
+			<td>$5 </td> 
+		</tr>
+		<tr>
+			<td>Sleeping mat</td>
+			<td>$5 </td> 
+		</tr>
+		<tr>
+			<td>Therma-rest style sleeping mat</td>
+			<td>$15</td> 
+		</tr>
+		<tr>
+			<td>Water bottle/Platypus Hoser system</td>
+			<td>$5 </td> 
+		</tr>
+		<tr>
+			<td>Head Torch</td>
+			<td>$15</td> 
+		</tr>
+		<tr>
+			<td>Walking Poles, pair</td>
+			<td>$15</td> 
+		</tr>
+		<tr>
+			<td>Gaiters</td>
+			<td>$15</td> 
+		</tr>
+		<tr>
+			<td>Sunglasses</td>
+			<td>$10</td> 
+		</tr>
+		<tr>
+			<td>Day pack </td>
+			<td>$20</td> 
+		</tr>
+		<tr>	
+			<td>Large rucksack</td>
+			<td>$35</td> 
+		</tr>	
+		<tr>
+			<td>Waterproof Duffel Bag</td>
+			<td>$20</td>
+		</tr>
+	</tbody>
+</table>
 </section>
