--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -1,12 +1,13 @@
-<h1>About Us </h1>
-<h6>the company</h6>
-<p>Bless Africa Tours and Safaris specialise in Mountain trekking, wildlife safari, Cultural and Eco Tours, Beach vocation, camping and lodge safari</p>
-<p>Tanzania has been blessed with rich history, cultural heritage, idyllic beaches, wildlife safaris, and the roof-top of Africa – Mount Kilimanjaro complemented by the warm hospitality of the charming people, make this a holiday experience that one will always remember.</p>
-<p>Bless Africa Tours and Safaris is registered under the Tanzania Company Act, 2002.  It is based in Tanzania, East Africa. We are a committed, passionate and experienced team of specialists who love tourism and are ready to guide our customers to experience and enjoy Tanzania’s natural and cultural heritage. From the very beginning, the company’s primary objective is to offer a variety of holiday packages organised by professionals with passion and commitment. Our team is a well established group of people with more than ten years experience within the Tanzanian tour industry.
-<p>The company is owned by Tanzanians who, after years of working for other established companies in the industry as guides, sought out an independent approach to develop their professional opportunities and extend opportunities for their working partners. The focus is to offer unique holiday packages which are inspiring to travellers while at the same time bring benefits to the local people, wildlife and  environment. Our holidays can be tailor-made and we are able to offer trips covering  the whole of Tanzania. We are specialists in mountain climbing such as Mount Kilimanjaro and Mount Meru. In addition we can offer Wildlife Safaris, Cultural Safaris, Beach holidays for example on the islands of Pemba, Mafia and Zanzibar, Cycling Tours and Canoeing.
-<p>Bless Africa tours and Safaris is <strong>the fastest growing local tour operator</strong> based in Moshi, set in the foothills of Kilimanjaro. The company can offer a selection of packages, or tailor-made breaks for groups ranging in size from an <strong>individual traveller  to groups of  tourists</strong>, from <strong>budget to luxury tours</strong>. If our clients would like to experience even more of Africa, we can also offer a <strong>free consultation</strong> to other <strong>African destinations</strong>.</p>
-
+<h1>About us</h1>
+<h6>THE COMPANY</h6>
+<p>Bless Africa Tours and Safaris specialises in providing Mountain Trekking, Safari and Beach Holidays in Tanzania. Set in the foothills of Mount Kilimanjaro, Bless Africa Tours and Safaris is the fastest growing local tour operator based in Moshi,
+<p>Tanzania has been blessed with a rich history and cultural heritage, idyllic beaches, amazing wildlife, and the roof-top of Africa – Mount Kilimanjaro. All of this is complemented by the warm hospitality of the charming Tanzanian people making a visit to Tanzania a holiday experience that will always be remembered.
+<p>Bless Africa Tours and Safaris is registered under the Tanzania Company Act, 2002. The company is owned by Tanzanians who, after years of working for other established companies in the industry as guides, sought out a more independent approach in order to develop their own professional opportunities and those of fellow working partners. 
+<p>Bless Africa Tours and Safaris aims to offer unique holiday packages which are both inspiring to travellers, while at the same time bringing benefits to the local people, wildlife and environment. 
+<p>Holidays with Bless Africa Tours and Safaris can be tailor-made and the Team are able to offer trips covering the whole of Tanzania. The company specialises in Trekking experiences on Mount Kilimanjaro and Mount Meru, Safaris to Tanzania’s outstanding National Parks including Taringire, Serengeti, Ngorongoro Crater, Lake Manyara and Arusha, and  Beach Holidays to the beautiful Tanzanian coastal resorts of Pangani, Bagamoyo and the island of Zanzibar. 
+<p>If our clients would like to experience even more of Africa, , or to explore other activities such as cycling, the Kilimanjaro Marathon, the Team can offer a free consultation.</p>
 <br>
+
 <h6 class="page-title">The Team</h6>
 <hr>
 <div class="row">
@@ -20,8 +21,8 @@
 		<p>
 			<em>Director </em><br>
 			<small>Mob: +255 7170 615 02</small><br>
-			<small>E-mail: <a href="mailto:&#x67;&#x6F;&#x64;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x5F;&#x65;&#x6D;&#x69;&#x6C;&#x20;&#x40;&#x79;&#x61;&#x68;&#x6F;&#x6F;&#x2E;&#x63;&#x6F;&#x6D;">godbless_emil @yahoo.com</a></small><br>
-			<small><a href="#">@BlessAfriTours</a></small>
+			<small>E-mail: <a href="mailto:&#x67;&#x6F;&#x64;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x61;&#x66;&#x72;&#x69;&#x63;&#x61;&#x74;&#x6F;&#x75;&#x72;&#x73;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">godblessafricatours@gmail.com</a></small><br>
+			<small><a href="http://twitter.com/blesstours" target="_blank">@BlessTours</a></small>
 		</p>
 	</article> 
 	
@@ -29,7 +30,7 @@
 		<h2 class="page-title">Thank you for your interest</h2>
 		<p>Godbless Emil Swai is the founder and managing Director of  Bless Africa Tours and Safaris. He is also the lead guide on the mountain trips. With the expert support and guidance from Godblesss your holiday adventure in Tanzania will be unforgettable.</p>
 		<p>Bless Africa Tours and Safaris specialise in Mountain climbs, Wildlife Safari, Eco Tours and Beach holidays within Tanzania. The company is committed to operating within the highest standard possible in Tanzania.  The safety and pleasure of our clients is the greatest priority for Bless Africa Tours and Safaris.</p>
-		<p>Godbless has been a guide on Mount Kilimanjaro for over 10 years. He has led trips up the Mountain in conjunction with UK charities and companies.  He is certified and licensed with the Kilimanjaro National Parks Authority (KINAPA), and has been trained in first aid. In addition Godbless has developed his knowledge about the local  flora and fauna and the wildlife that may be encountered on safari. Both his extensive experience and education will ensure a safe, knowledgeable and enjoyable experience whether it be an expedition to the summit of Mount Kilimanjaro, Safari or trip to one of Tanzania’s beautiful beaches.</p>
+		<p>Godbless has been a guide on Mount Kilimanjaro for over 6 years. He has led trips up the Mountain in conjunction with UK charities and companies.  He is certified and licensed with the Kilimanjaro National Parks Authority (KINAPA), and has been trained in first aid. In addition Godbless has developed his knowledge about the local  flora and fauna and the wildlife that may be encountered on safari. Both his extensive experience and education will ensure a safe, knowledgeable and enjoyable experience whether it be an expedition to the summit of Mount Kilimanjaro, Safari or trip to one of Tanzania’s beautiful beaches.</p>
 		<br>
 	</article>
 </div>
@@ -45,8 +46,9 @@
 		<p>
 			<em>Director </em><br>
 			<small>Mob: +44 7974 258 491</small><br>
-			<small>E-mail: <a href="mailto:&#x6A;&#x2E;&#x63;&#x75;&#x74;&#x74;&#x73;&#x40;&#x72;&#x6F;&#x63;&#x6B;&#x65;&#x74;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">j.cutts@rocketmail.com</a></small><br>
-			<small><a href="#">@BlessJoCutts</a></small>
+			<small>Phn: +44 1507 617 777</small><br>
+			<small>E-mail: <a href="mailto:&#x6A;&#x6F;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x61;&#x66;&#x72;&#x69;&#x63;&#x61;&#x74;&#x6F;&#x75;&#x72;&#x73;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">joblessafricatours@gmail.com</a></small><br>
+			<small><a href="http://twitter.com/blesstours" target="_blank">@BlessTours</a></small>
 		</p>
 	</article> 
 	<article class="span6">
