Accommodations and About us done.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -148,6 +148,10 @@ color: #999;
 	padding: 10px 14px;
 	margin: 0 auto 10px;
 	}
+	.balance-slider{
+		display:none;
+	}
+	
 }
 
 @media (max-width: 768px) and (min-width: 480px) {
@@ -162,6 +166,9 @@ color: #999;
 	}
 	.jumbotron .btn {
 	margin-bottom: 10px;
+	}
+	.balance-slider{
+		display:none;
 	}
 }
 
