--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 
 <!--====================== for checking viewport======================= -->
-<!--======================
+<!--
 <div id="viewportwidth" class="alert alert-success">
 	
 </div>
@@ -72,7 +72,7 @@ window.onmousemove=function(event)
 
 
 <div class="row">
-	<div class="span2">
+	<div class="span2 balance-slider">
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 	</div>
@@ -96,7 +96,7 @@ window.onmousemove=function(event)
 		<!--/ Carousel -->
 	</article>
 	
-	<div class="span2">
+	<div class="span2 balance-slider">
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 	</div>
@@ -136,7 +136,7 @@ window.onmousemove=function(event)
 	<div class="row">
 		<div class="span4">
 			<h2><i class="icon icon-user icon-large "></i> About us</h2>
-			<p>Bless Africa Tours  and safaris is a locally owned Travel company based in Moshi. With over 10 years experience in the Trek and Travel industry and extensive local knowledge and links the company strives to add something extra to a visit to Tanzania.</p>
+			<p>Bless Africa Tours  and safaris is a locally owned Travel company based in Moshi. With over 6 years experience in the Trek and Travel industry and extensive local knowledge and links the company strives to add something extra to a visit to Tanzania.</p>
 		</div>
 		<div class="span4">
 			<h2><i class="icon icon-home icon-large "></i> Accommodation</h2>
