--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 									<li><%= link_to "Guides and porters", :guides_and_porters, title: 'Our tour guides and porters' %></li>
                   <li><%= link_to "About Tanzania", :about_tanzania, title: 'About Tanzania' %></li>
 									<li><%= link_to "Contact us", :contact_us, title: 'Contact Us' %></li> 
-									<li><%= link_to "Newsletter", ':newsletters', title: 'Subscribe to our newsletter' %></li>
+									<li><%= link_to "Newsletter", '#:newsletters', title: 'Subscribe to our newsletter' %></li>
                   <li><%= link_to "About us", :about_us, title: 'About us' %></li>
                   <li><%= link_to "Galleries", :albums, title: 'Photo galleries' %></li>
 									<li><%= link_to "Blog", :posts, title: 'Read the blog' %></li>
