--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -46,7 +46,7 @@
   	</div>
 	<% end %>
 	
-	<% if can? :update, :users %>
+	<% if @user.new_record? %>
   <div class="control-group">
     <%= f.label :password, required: true, :class => 'control-label' %>
     <div class="controls">
