--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,12 +20,12 @@
 				<% if can? :access, :users %>
         <td><%= user.username %></td>
         <td><%= user.email %></td>
-        <td><%= user.admin %></td>
-        <td><%= user.moderator %></td>
+        <td><%= user.admin? ? raw('<i class="label label-success">Yeah :)</i>') : 'Nope! :(' %></td>
+        <td><%= user.moderator? ? raw('<i class="label label-success">Yeap :)</i>') : 'Nope! *_*' %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_user_path(user), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to t('.destroy', :default => t("helpers.links.delete")),
                       user_path(user),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
