New assets including Jo's picture.

--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -19,7 +19,7 @@
 		</ul>
 		<h3>Godbless Emil Swai</h3>
 		<p>
-			<em>Director </em><br>
+			<em>Managing Director </em><br>
 			<small>Mob: +255 7170 615 02</small><br>
 			<small>E-mail: <a href="mailto:&#x67;&#x6F;&#x64;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x61;&#x66;&#x72;&#x69;&#x63;&#x61;&#x74;&#x6F;&#x75;&#x72;&#x73;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">godblessafricatours@gmail.com</a></small><br>
 			<small><a href="http://twitter.com/blesstours" target="_blank">@BlessTours</a></small>
@@ -41,7 +41,7 @@
 		</ul>
 		<h3>Joanne Cutts</h3>
 		<p>
-			<em>Director </em><br>
+			<em>Director (UK)</em><br>
 			<small>Mob: +44 7974 258 491</small><br>
 			<small>Phn: +44 1507 617 777</small><br>
 			<small>E-mail: <a href="mailto:&#x6A;&#x6F;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x61;&#x66;&#x72;&#x69;&#x63;&#x61;&#x74;&#x6F;&#x75;&#x72;&#x73;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">joblessafricatours@gmail.com</a></small><br>
